--- a/Microlife/Base.lproj/Main.storyboard
+++ b/Microlife/Base.lproj/Main.storyboard
@@ -78,25 +78,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="516-Ya-bkR"/>
+                    <navigationItem key="navigationItem" id="516-Ya-bkR">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="Vbe-XE-sEy">
+                            <connections>
+                                <segue destination="Acx-uK-oh2" kind="push" id="7fw-6k-n3G"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ijZ-ah-sHm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="408" y="658"/>
         </scene>
-        <!--Reminder List View Controller-->
-        <scene sceneID="TJm-eh-Dar">
+        <!--Set Alarm View Controller-->
+        <scene sceneID="fOV-Q6-Xk5">
             <objects>
-                <viewController storyboardIdentifier="ReminderListVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="WLD-ZL-Ztm" customClass="ReminderListViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="6Ld-CS-taa">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                <viewController id="Acx-uK-oh2" customClass="SetAlarmViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="grB-8Z-9qJ">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" id="wDI-q1-Eab">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Wbr-Mx-UdH"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="twi-y4-LGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="41c-fv-Nxh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="792" y="658"/>
+            <point key="canvasLocation" x="810" y="658"/>
         </scene>
         <!--Main Overview View Controller-->
         <scene sceneID="hRv-XV-wkD">
