--- a/Microlife/Base.lproj/Main.storyboard
+++ b/Microlife/Base.lproj/Main.storyboard
@@ -105,6 +105,20 @@
             </objects>
             <point key="canvasLocation" x="810" y="658"/>
         </scene>
+        <!--Alarm Detail View Controller-->
+        <scene sceneID="zfh-NV-ACt">
+            <objects>
+                <viewController id="604-5E-kaK" customClass="AlarmDetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mxt-rh-nyw">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Spt-B5-FQw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1193" y="658"/>
+        </scene>
         <!--Main Overview View Controller-->
         <scene sceneID="hRv-XV-wkD">
             <objects>
